cabal-version:       2.4
name:                HQu
version:             0.0.0.0
synopsis:            General purpose quantitative finance library
description:         General purpose quantitative finance library
homepage:            https://github.com/ghais/HQu
bug-reports:         https://github.com/ghais/HQu/issues
license:             MIT
license-file:        LICENSE
author:              Ghais
maintainer:          Ghais <0x47@0x49.dev>
copyright:           2021 Ghais
category:            Finance,Math
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/ghais/HQu.git

common common-options
  build-depends:       base >= 4.11.1.0 && < 4.14
                     , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HQu

test-suite HQu-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       HQu
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark HQu-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , HQu
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
